--- a/aerzte_apotheker.html
+++ b/aerzte_apotheker.html
@@ -221,7 +221,7 @@
 
                     </p>
                     <h3>
-                        Diese Dienstleistungen bieten wir für Sie an:
+                        Diese Dienstleistungen biete Ich für Sie an:
                     </h3>
                     <p class="p-text">
                         <b> • Businessplan (Berater) </b> <br>
