--- a/erstinformation.html
+++ b/erstinformation.html
@@ -101,35 +101,33 @@
   <div style="min-height: 100vh; margin-top: 12vh; padding-left: 5vw; padding-right: 5vw;">
     <h2>Erstinformation</h2>
     <p>
-        § 1 Name und Anschrift medprivatefinance  Nikolsburger Str. 11 10717 Berlin Telefon: 01705407967 E-Mail: tuerk@med-pf.de Internet: www.medprivatefinance.de
+        § 1 Name und Anschrift medprivatefinance  Nikolsburger Str. 11 10717 Berlin Telefon: 01705407967 E-Mail: tuerk@med-pf.de, ausschließlich und unabhängig als Versicherungsmakler- und Finanzmakler nach § 93 HGB tätig. Internet: www.medprivatefinance.de
     </p><p>
        § 2 zugelassene Tätigkeit Versicherungsmakler mit Erlaubnis nach § 34d Abs. 1 der Gewerbeordnung (GewO). Finanzanlagenvermittler mit Erlaubnis nach § 34f Abs. 1, Satz 1, Nr. 1 GewO. Immobilien Darlehensvermittler mit Erlaubnis nach § 34 i Abs. 1 S. 1 GewO.
     </p><p>
        § 3 Zuständige Behörde für die Erlaubnis § 34d GewO: IHK  Berlin, Fasanenstr. 85, 10623 Berlin § 34f GewO: IHK, Fasanenstr. 85, 10623 Berlin § 34i GewO: IHK Berlin, Fasanenstr. 85, 10623 Berlin
     </p><p>   
-       § 4 Eintragung im Vermittlerregister Eintragung als Versicherungsmakler unter der Registernummer D-0M56-31YKZ-04 Eintragung als Finanzanlagenvermittler unter der Registernummer: D-F-107-AK89-04 Eintragung als Immobilien/Finanzierung- Darlehensvermittler unter der Registernummer: D-W-107-HL23-78
+       § 4 Eintragung im Vermittlerregister Eintragung als Versicherungsmakler unter der Registernummer D-0M56-31YKZ-04 Eintragung als Finanzanlagenvermittler unter der Registernummer: D-F-107-AK89-04 Eintragung als Immobilien/Finanzierung- Darlehensvermittler unter der Registernummer: D-W-107-HL23-78.
     </p><p>   
        § 5 Registerstelle des Vermittler-Registers DIHK | Deutsche Industrie- und Handelskammer Breite Straße 29 10178 Berlin Telefon 0180-6005850 (Festnetzpreis 0, 20 €/ Anruf; Mobilfunkpreise maximal 0,60 €/ Anruf) www.vermittlerregister.info
     </p><p>   
        § 6 Kosten für die Immobiliendarlehensvermittlung Der Vermittler erhält ein Leistungsentgelt für die erfolgreiche Darlehensvermittlung vom Darlehensgeber.Die Höhe dieser Vergütung ergibt sich aus der Darlehenssumme und Beratungsumfang.
     </p><p>   
-       § 7 Produktpalette für die Immobiliendarlehensvermittlung unabhängig und frei
+       § 7 Produktpalette für die Immobiliendarlehensvermittlung: je nach Beratungsumfang und Bedarfsanalyse, unabhängig und frei nach der Wahl von Finanzpartnern.
     </p><p>   
-       § 8 Informationen über die Vergütung bei der Tätigkeit als Versicherungsmakler Vergütung gegen Provision. Für die Vermittlung und die Betreuung von Versicherungsverträgen erhalten wir in der Regel Courtagen/Provisionen, die von den Versicherungsunternehmen an uns ausgezahlt bzw verrechnet, aber wirtschaftlich von Ihnen getragen werden, da sie in den Versicherungsprämien enthalten sind. Über die vorgenannten Vergütungen hinaus erhalten wir keine anderen Zuwendungen und keine Anteile an Versicherungsunternehme bzw. Finanzunternehmen.
+       § 8 Informationen über die Vergütung bei der Tätigkeit als Versicherungsmakler: Vergütung gegen Provision. Für die Vermittlung und die Betreuung von Versicherungsverträgen erhalten wir in der Regel Courtagen/Provisionen, die von den Versicherungsunternehmen an uns ausgezahlt bzw. verrechnet, aber wirtschaftlich von Ihnen getragen werden, da sie in den Versicherungsprämien enthalten sind. Über die vorgenannten Vergütungen hinaus erhalten wir keine anderen Zuwendungen und keine Anteile an Versicherungsunternehmen und Finanzunternehmen.
     </p><p> 
-       
-       § 9 Informationen über Emittenten und Anbieter im Rahmen der Finanzanlagen Vermittlungs- oder Beratungsleistungen innerhalb der Vorgaben von Partnern Financial Services Networks (FAM) oder direkt mit Fondgesellschaften und Banken
+       § 9 Informationen über Emittenten und Anbieter im Rahmen der Finanzanlagen Vermittlungs- oder Beratungsleistungen innerhalb der Vorgaben von Partnern Financial Services Networks (FAM) oder direkt mit Fondgesellschaften und Banken.
     </p><p>  
-       § 10 Beratungsleistungen als Immobiliendarlehensvermittler Der Vermittler erbringt Beratungsdienstleistungen
+       § 10 Beratungsleistungen als Immobiliendarlehensvermittler Der Vermittler erbringt Beratungsdienstleistungen.
     </p><p>   
-       § 11 Informationen über die Vergütung bei der Finanzanlagenberatung und -vermittlung Servicegebühren und Beratungsgebühren durch die Anbieter der Finanzanlage und Emittenten
+       § 11 Informationen über die Vergütung bei der Finanzanlagenberatung und -vermittlung: Servicegebühren und Beratungsgebühren durch die Anbieter der Finanzanlage und Emittenten.
     </p><p>  
-       § 12 Schlichtungsstellen für Außergerichtliche Streitbeilegung im Rahmen der Versicherungsvermittlung Versicherungsombudsmann e.V. Postfach 08 06 32 10006 Berlin https://www.versicherungsombudsmann.de/ Ombudsmann private Krankenversicherung- und Pflegeversicherung Postfach 06 02 22 10052 Berlin   https://www.pkv-ombudsmann..de
+       § 12 Schlichtungsstellen für Außergerichtliche Streitbeilegung im Rahmen der Versicherungsvermittlung Versicherungsombudsmann e.V. Postfach 08 06 32 10006 Berlin https://www.versicherungsombudsmann.de/ Ombudsmann private Krankenversicherung- und Pflegeversicherung Postfach 06 02 22, 10052 Berlin   https://www.pkv-ombudsmann.de
     </p><p>   
-       § 13 Beschwerden und Schlichtung im Rahmen der Immobilien Darlehensvermittlung Bei einer Beschwerde wenden Sie sich bitte an: Versicherungsombudsmann e.V. Postfach 080632 10006 Berlin Telefon: 08003696000 oder an die Beschwerdestelle der Deutschen Bundesbank Postfach 11 12 32 60047 Frankfurt am Mai
+       § 13 Beschwerden und Schlichtung im Rahmen der Immobilien Darlehensvermittlung Bei einer Beschwerde wenden Sie sich bitte an: Versicherungsombudsmann e.V. Postfach 080632 10006 Berlin Telefon: 08003696000 oder an die Beschwerdestelle der Deutschen Bundesbank Postfach 11 12 32, 60047 Frankfurt am Main.
     </p><p>   
-       § 14 Qualifikationen Studium Abschluss als Diplom Betriebswirt (FH) Weiterbildungskonzepte, Jährliche verpflichtende Bildungspunkte (gesetzlich verpflichtet) Erfahrung im Bereich Ärzte & Apotheker Beratung (Finanzierung, Absicherung, Praxisgründung, Praxisabgabe) Erfahrung Im Bereich der Betrieblichen Altersversorgung Ganzheitliche Beratungskonzepte Weitere Infos bei www.vermittlerregister.de
-       
+       § 14 Qualifikationen: Studium Abschluss, Diplom Betriebswirt (FH) ,Weiterbildungskonzepte, Jährliche verpflichtende Bildungspunkte (gesetzlich verpflichtet), Erfahrung und Beratung im Bereich Ärzte & Apotheker Finanzberatung (Finanzierung, Absicherung, Praxisgründung, Existenzgründung,  Praxisabgabe) Erfahrung und Beratung im Bereich der Betrieblichen Altersversorgung und ganzheitliche Beratungskonzepte für Akademiker/in,  Weitere Infos bei www.vermittlerregister.de
        </p>
   </div>
 
