--- a/impressum.html
+++ b/impressum.html
@@ -127,7 +127,7 @@
         <h3>Unternehmens/Kapitalbeteiligungen:</h3>
         Es besteht keine direkte oder indirekte Beteiligung von mehr als 10 % an den Stimmrechten oder am Kapital eines
         Versicherungsunternehmens. Kein Versicherungsunternehmen verfügt durch eine direkte oder indirekte Beteiligung
-        über mehr als 10 % der Stimmrechte oder des Kapitals der medprivatefinance Beratung von Aykut Türk
+        über mehr als 10 % der Stimmrechte oder des Kapitals der medprivatefinance.
 
         </p>
         <p>
@@ -161,16 +161,16 @@
             <br>
         <h3>Schlichtungsstellen:</h3>
 
-        Versicherungsombudsmann e.V
-        Postfach 08 06 32, 10006 Berlin
-        www.versicherungsombudsmann.de
-        Ombudsmann Private Kranken- und Pflegeversicherung
-        Postfach 06 02 22, 10052 Berlin
-        www.pkv-ombudsmann.de
+        Versicherungsombudsmann e.V<br>
+        Postfach 08 06 32, 10006 Berlin<br>
+        www.versicherungsombudsmann.de<br>
+        Ombudsmann Private Kranken- und Pflegeversicherung<br>
+        Postfach 06 02 22, 10052 Berlin<br>
+        www.pkv-ombudsmann.de<br></br>
 
-        Bundesanstalt für Finanzdienstleistungsaufsicht (BaFin)
-        Graurheindorfer Str. 108
-        53117 Bonn
+        Bundesanstalt für Finanzdienstleistungsaufsicht (BaFin)<br>
+        Graurheindorfer Str. 108<br>
+        53117 Bonn<br>
         www.bafin.de
         </p>
         <p>
