--- a/index.html
+++ b/index.html
@@ -100,21 +100,6 @@
 
     <span class="anchor" id="Startseite"></span>
     <div class="container-fluid start-d">
-        <div class="row">
-            <div class="col-6"></div>
-            <div class="col-5 start-content-d">
-                <div class="start-text-d animation" style="padding: 20px; background-color: #F5F3EE; color: black;">
-                    <h3>Bauen Sie Ihr Vermögen auf und erhalten Sie kompetente Beratung!</h3>
-                    <p> Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der Verwaltung Ihres Vermögens.
-                        Wir kümmern uns um Ihre finanziellen Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
-                    </p>
-
-                    <p>Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein Beratungsgespräch – Zögern Sie
-                        nicht!</p>
-                    <h3>Nutzen Sie unsere unverbindliche Online Beratung!</h3>
-                </div>
-            </div>
-        </div>
         <div class="row curved">
             <div class="col-12">
                 <svg class="curved-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -135,12 +120,26 @@
             </div>
         </div>
     </div>
-    <div class="container-flow bg-beige py-5">
+    <div class="container-flow bg-beige">
         <div class="row py-5">
             <div class="col-12 text-center reveal">
                 <h2 style="color:#98C00A; font-family: handwrittenFont;">„Eine Investition in Wissen bringt immer noch
                     die besten Zinsen“</h2>
                 <h3 style="font-style: italic;">Benjamin Franklin</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-8 start-content-d" style="margin-top: 5vh; margin-bottom: 0vh;">
+                <div class="start-text-d reveal" style="padding: 20px; background-color: #F5F3EE; color: black; padding-top: 0px;">
+                    <h3>Vermögensaufbau und persönliche Online-Beratung</h3>
+                    <p> Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der Verwaltung Ihres Vermögens.
+                        Wir kümmern uns um Ihre finanziellen Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
+                    </p>
+
+                    <p>Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein Beratungsgespräch – Zögern Sie
+                        nicht!</p>
+                    <h3>Nutzen Sie unsere unverbindliche Online Beratung!</h3>
+                </div>
             </div>
         </div>
         <div class="row py-5 justify-content-center text-center reveal">
@@ -332,7 +331,7 @@
                     <h3> Versicherungen</h3>
 
                     <p class="p-text my-3">
-                        Wir beraten Sie individuell und auf Ihre Bedürfnisse zu geschnitten. Je nach Zielgruppe und
+                        Wir beraten Sie individuell und auf Ihre Bedürfnisse zugeschnitten. Je nach Zielgruppe und
                         Ansprüchen suchen wir Ihnen die geeigneteste Versicherungslösung aus.
                     </p>
                     <a href="versicherung.html">
