--- a/kontakt.html
+++ b/kontakt.html
@@ -182,7 +182,8 @@
                 </div>
 
             </form>
-            <h3>Oder melden Sie sich jederzeit per E-Mail! Videoberatungen jederzeit zu allen Themen möglich.</h3>
+            <h3>Persönliche Videoberatung zu allen Themen möglich.</h3>
+            <h3>Bitte vereinbaren Sie vorher mit uns einen Termin für eine Videokonferenz.</h3>
             <p class="p-text" style="font-weight: bold; font-size:large">E-Mail Adresse: tuerk@med-pf.de</p>
         </div>
     </div>
