--- a/versicherung.html
+++ b/versicherung.html
@@ -106,7 +106,7 @@
             <div class="col-1"></div>
             <div class="col-8">
                 <div class="sub-content p-5 bg-beige">
-                    <h2>Versicherungslösungen für Akademiker und anspruchsvolle Kunden</h2>
+                    <h2>Versicherungslösungen für Akademiker/innen und anspruchsvolle Kunden</h2>
                     <p style='font-weight: bold; font-size: large;'>
                         Welche Anforderungen stellen Akademiker an Versicherungspartnern?
                     </p>
@@ -163,7 +163,7 @@
                         mit einer solchen Versicherung mögliche Einkommensausfälle ausgleichen oder mindern.
                     </p>
                     <h4>
-                        Haftplfichtversicherung - Absolutes Muss!
+                        Haftpflichtversicherung - Absolutes Muss!
                     </h4>
                     <p class="p-text">
                         Warum ist eine Haftpflichtversicherung wichtig ?
@@ -173,7 +173,7 @@
                         mögliche Folgen haften Sie mit Ihrem gesamten Einkommen und Vermögen.
                         <br><br>
                         Was deckt die
-                        Privathaftplicht?
+                        Privathaftpflicht?
                         <br><br>
                         • Sachschäden <br>
                         • Personenschäden <br>
