--- a/betr_alt.html
+++ b/betr_alt.html
@@ -106,7 +106,7 @@
     <div class="jumbrotron">
         <div class="row my-5">
             <div class="col-1"></div>
-            <div class="col-8">
+            <div class="col-lg-8 col-md-8 col-sm-12">
                 <div class="sub-content p-5 bg-beige">
                     <h2>Betriebliche Altersvorsorge</h2>
                     <p style="font-weight: bold">Grundlegendes Problem in Deutschland ist die Altersarmut! Diese wird durch den demographischen Wandel befeuert.</p>
@@ -168,7 +168,7 @@
                         </div>
                 </div>
             </div>
-            <div class="col-3">
+            <div id = "sidebar" class="col-3">
                 <div class="row p-3 bg-beige sub-contact"
                     style="position: sticky; position: -webkit-sticky; top: 20vh;">
                     <div class="col-8">
