--- a/versicherung.html
+++ b/versicherung.html
@@ -104,8 +104,8 @@
     <div class="jumbrotron">
         <div class="row my-5">
             <div class="col-1"></div>
-            <div class="col-8">
-                <div class="sub-content p-5 bg-beige">
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="sub-content p-5 bg-lg-beige bg-md-beige">
                     <h2>Versicherungslösungen für Akademiker/innen und anspruchsvolle Kunden</h2>
                     <p style='font-weight: bold; font-size: large;'>
                         Welche Anforderungen stellen Akademiker an Versicherungspartnern?
@@ -224,7 +224,7 @@
 
                 </div>
             </div>
-            <div class="col-3">
+            <div id = "sidebar" class="col-3">
                 <div class="row p-3 bg-beige sub-contact"
                     style="position: sticky; position: -webkit-sticky; top: 20vh;">
                     <div class="col-8">
