--- a/aerzte_apotheker.html
+++ b/aerzte_apotheker.html
@@ -106,8 +106,8 @@
     <div class="jumbrotron">
         <div class="row my-5">
             <div class="col-1"></div>
-            <div class="col-8">
-                <div class="sub-content p-5 bg-beige">
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="sub-content p-5 bg-lg-beige bg-md-beige">
                     <h2>Finanzberatung für Ärzte und Apotheker</h2>
                     <p style="font-weight: bold">Sie planen Ihre Niederlassung oder suchen eine Praxis zum Kauf oder
                         Übernahme?</p>
@@ -261,7 +261,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-3">
+            <div id = "sidebar" class="col-3">
                 <div class="row p-3 bg-beige sub-contact"
                     style="position: sticky; position: -webkit-sticky; top: 20vh;">
                     <div class="col-8">
