--- a/verm_management.html
+++ b/verm_management.html
@@ -106,8 +106,8 @@
     <div class="jumbrotron">
         <div class="row my-5">
             <div class="col-1"></div>
-            <div class="col-8">
-                <div class="sub-content p-5 bg-beige">
+            <div class="col-lg-8 col-md-8 col-sm-12">
+                <div class="sub-content p-5 bg-lg-beige bg-md-beige">
                     <h2>Grundsätze des Vermögensmanagement „Magisches Dreieck“ der Geldanlage:</h2>
                     <p class="p-text">
                         Wir bieten keine Standardlösungen, wir bieten individuelle Lösungen. Auf die richtige Mischung
@@ -146,7 +146,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-3">
+            <div id = "sidebar" class="col-3">
                 <div class="row p-3 bg-beige sub-contact"
                     style="position: sticky; position: -webkit-sticky; top: 20vh;">
                     <div class="col-8">
