--- a/index.html
+++ b/index.html
@@ -130,36 +130,16 @@
     <div class="container-fluid start-d">
       <!-- Mobile Intro -->
       <div class="row home-text-mobile animation" id="home-mobile">
-        <div class="col-12 align-items-center px-5">
-          <h3>Vermögensaufbau und persönliche Online-Beratung</h3>
-          <p>
-            Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der
-            Verwaltung Ihres Vermögens. Wir kümmern uns um Ihre finanziellen
-            Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
-          </p>
+        <div class="col-12 align-items-center px-5 cloud" style="color: black; border-radius: 0%; height: auto; width: auto;">
 
-          <p>
-            Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein
-            Beratungsgespräch – Zögern Sie nicht!
-          </p>
           <h3>Nutzen Sie unsere unverbindliche Online Beratung!</h3>
         </div>
       </div>
       <!-- Mobile Intro End -->
       <div class="row animation" id="home-desktop">
         <div class="col-6"></div>
-        <div class="col-6 home-text-desktop px-5">
-          <h3>Vermögensaufbau und persönliche Online-Beratung</h3>
-          <p>
-            Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der
-            Verwaltung Ihres Vermögens. Wir kümmern uns um Ihre finanziellen
-            Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
-          </p>
+        <div class="col-6 px-5 cloud" style="margin-top: 40vh; margin-left: 10vw;">
 
-          <p>
-            Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein
-            Beratungsgespräch – Zögern Sie nicht!
-          </p>
           <h3>Nutzen Sie unsere unverbindliche Online Beratung!</h3>
         </div>
       </div>
@@ -204,7 +184,19 @@
     </div>
     <div class="container-flow bg-beige">
       <div class="row py-5">
-        <div class="col-12 text-center reveal">
+        <div class="col-12 text-center reveal" style="width: 80%; margin-left: 10%;">
+          <h3>Vermögensaufbau und persönliche Online-Beratung</h3>
+          <p>
+            Bei uns erhalten Sie eine exzellente Beratung beim Aufbau und der
+            Verwaltung Ihres Vermögens. Wir kümmern uns um Ihre finanziellen
+            Ziele und helfen Ihnen, aus Ihrem Geld das Beste zu machen.
+          </p>
+
+          <p>
+            Nutzen Sie jetzt unser Kontaktformular und vereinbaren Sie ein
+            Beratungsgespräch – Zögern Sie nicht!
+          </p>
+          <br>
           <h2 style="color: #98c00a; font-family: handwrittenFont">
             „Eine Investition in Wissen bringt immer noch die besten Zinsen“
           </h2>
